RESOLVED FIXED81235
[chromium] Quads that become fully opaque after culling should not use blending
https://bugs.webkit.org/show_bug.cgi?id=81235
Summary [chromium] Quads that become fully opaque after culling should not use blending
Dana Jansens
Reported 2012-03-15 10:31:29 PDT
[chromium] Quads that become fully opaque after culling should not use blending
Attachments
Patch (11.88 KB, patch)
2012-03-15 10:33 PDT, Dana Jansens
no flags
Patch (12.12 KB, patch)
2012-03-15 12:17 PDT, Dana Jansens
no flags
Dana Jansens
Comment 1 2012-03-15 10:33:53 PDT
Dana Jansens
Comment 2 2012-03-15 12:17:48 PDT
Created attachment 132100 [details] Patch The quad opaqueRect is now used for purposes of blending, not culling. Comment adjusted accordingly.
Adrienne Walker
Comment 3 2012-03-15 13:33:11 PDT
Comment on attachment 132100 [details] Patch Ooh, this should have been this way in the first place. R=me.
WebKit Review Bot
Comment 4 2012-03-16 01:39:57 PDT
Comment on attachment 132100 [details] Patch Clearing flags on attachment: 132100 Committed r110968: <http://trac.webkit.org/changeset/110968>
WebKit Review Bot
Comment 5 2012-03-16 01:40:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.