[chromium] Quads that become fully opaque after culling should not use blending https://bugs.webkit.org/show_bug.cgi?id=81235

Patch by Dana Jansens <danakj@chromium.org> on 2012-03-16
Reviewed by Adrienne Walker.

Source/WebCore:

Unit test: CCLayerTreeHostImplTest.blendingOffWhenDrawingOpaqueLayers

* platform/graphics/chromium/cc/CCDrawQuad.h:
(WebCore::CCDrawQuad::needsBlending):

Source/WebKit/chromium:

* tests/CCLayerTreeHostImplTest.cpp:
(WebKit::BlendStateCheckLayer::appendQuads):
(WebKit::BlendStateCheckLayer::setQuadRect):
(WebKit::BlendStateCheckLayer::setQuadVisibleRect):
(WebKit::BlendStateCheckLayer::setOpaqueContents):
(WebKit::BlendStateCheckLayer::setOpaqueContentRect):
(WebKit::BlendStateCheckLayer::BlendStateCheckLayer):
(BlendStateCheckLayer):
(WebKit::TEST_F):

Canonical link: https://commits.webkit.org/98526@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110968 268f45cc-cd09-0410-ab3c-d52691b4dbfc